# rankflow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: generate_catalog.py
notebooks/: 01_ranking_analysis.ipynb
src/evaluation/: metrics.py
src/reranker/: feature_extractor.py  ltr_model.py
src/retrieval/: embedder.py
src/serving/: api.py
tests/: test_metrics.py  test_reranker.py  test_retrieval.py
