[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rankflow"
version = "0.1.0"
description = "LLM-augmented two-stage ranking system with multilingual support"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "lightgbm>=4.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.30",
    "numpy>=1.26",
    "joblib>=1.4",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
